# PG-PMC

./: .gitignore  README.md  requirements.txt
project/: .dockerignore  .env.docker  .env.example  .env.sqlserver  .eslintrc.js  .gitignore  .pre-commit-config.yaml  ADVANCED_CODE_QUALITY_INSIGHTS.md  API.md  ARCHITECTURE_ENHANCEMENT_GUIDE.md  CODE_QUALITY_REPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  Makefile  QUICK_START_GUIDE.md  README.md  babel_config.js  dev.bat  docker-compose.dev.yml  docker-compose.yml  jest_config.js  lighthouserc.js  package-lock.json  package.json  pmc_main.py  readme.md  requirements.txt  setup.cfg  start-dev.bat  start-docker.bat  start.bat  stop-docker.bat  tailwind_config.js  test_backup_scheduler.py  test_config.py  test_creo_com.py  test_project_management.py  (+17 more)
project/.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
project/.github/workflows/: ci.yml
project/backend/: Dockerfile  Dockerfile.dev  alembic.ini  check_tables.py  direct_insert.py  init_admin_user.py  init_equipment.py  init_other_data.py  main.py  pmc.db  pmc_test.db  requirements.txt  simple_init.py  simple_main.py  test_backup_api.py  test_backup_scheduler.py  test_reminder_notification_system.py  test_reminder_system.py  verify_data.py
project/backend/alembic/: env.py
project/backend/app/: database.py  main.py
project/backend/docs/: backup_scheduler_guide.md
project/backend/scripts/: init_test_data.py  test_models.py
project/backend/sql/: init.sql
project/backups/reports/: backup_report_20250730.json
project/config/: README.md
project/docker/webhook/: Dockerfile  docker-compose.yml  nginx.conf
project/docs/: webhook_service.md
project/frontend/: .env.example  Dockerfile  Dockerfile.dev  craco.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
project/frontend/public/: index.html
project/frontend/src/: App.css  App.tsx  index.css  index.tsx  setupProxy.js
project/nginx/: nginx.conf
project/nginx/conf.d/: default.conf
project/public/: index.html
project/scripts/: analyze_extra_files.py  check_config.py  create_cylinder.py  deploy_webhook.sh  health_check.sh  init-db.sql  init_config.py  init_project.sh  move_temp_files.py  quality-check.bat  quality-check.sh
project/src/: client.ts  index.ts  main.py
project/src/__tests__/: app_config.test.js  client.test.js  config_reader.test.js  index.test.js  integration.test.js  typescript.test.js
project/src/ai/: __init__.py  design_interpreter.py  intelligent_scheduler.py  language_processor.py  parameter_parser.py  project_command_processor.py  project_identifier.py  warning_system.py
project/src/config/: README.md  __init__.py  app_config.js  cli.py  config_cli.py  config_manager.py  config_reader.js  config_reader.ts  config_sync.py  config_templates.py  config_validator.py  config_watcher.py  default_config.py  environment.py  example_usage.py  nginx.conf  path_manager.py  settings.py  validator.py  配置系统使用指南.md
project/src/core/: CONFIG_README.md  __init__.py  app.py  config_center.py  config_cli.py  config_migration.py  migrate_config.py  project_api.py  project_manager.py  simple_migrate.py  simple_test.py  test_config_system.py  unified_logging.py  validate_config.py
project/src/creo/: __init__.py  api_wrapper.py  connector.py  create_cylinder.py  creoson_connector.py  geometry_operations.py
project/src/database/: __init__.py  connector.py
project/src/pmc/: models.py  (+1 more)
project/tests/: basic.test.js  setup.js
(+406 files in other folders)
