[metadata]
name = pg-pmc-ai-design-assistant
version = 1.0.0
description = PG-PMC AI设计助理 - 基于自然语言的智能CAD设计工具
author = 3AI电器实业有限公司
author_email = dev@pg-pmc.com
url = https://github.com/pg-pmc/ai-design-assistant
keywords = AI, CAD, Creo, Design, Assistant, NLP
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.11
install_requires =
    # AI和机器学习
    openai>=1.0.0
    transformers>=4.30.0
    torch>=2.0.0
    numpy>=1.24.0
    scikit-learn>=1.3.0
    
    # 自然语言处理
    spacy>=3.6.0
    nltk>=3.8.0
    jieba>=0.42.1
    
    # Web框架和API
    fastapi>=0.100.0
    uvicorn[standard]>=0.22.0
    pydantic>=2.0.0
    
    # 几何计算和数学
    scipy>=1.11.0
    sympy>=1.12
    matplotlib>=3.7.0
    
    # 配置和工具
    pyyaml>=6.0
    python-dotenv>=1.0.0
    loguru>=0.7.0
    typer>=0.9.0
    rich>=13.0.0
    
    # HTTP和网络
    requests>=2.31.0
    httpx>=0.24.0
    
    # 数据处理
    pandas>=2.0.0
    openpyxl>=3.1.0

[options.extras_require]
dev =
    # 测试工具
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.0
    pytest-mock>=3.11.0
    
    # 代码质量
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.5.0
    isort>=5.12.0
    pre-commit>=3.3.0
    
    # AI开发工具
    jupyter>=1.0.0
    notebook>=7.0.0
    ipykernel>=6.25.0
    
    # 文档生成
    sphinx>=7.1.0
    sphinx-rtd-theme>=1.3.0
    
    # 性能分析
    memory-profiler>=0.61.0
    line-profiler>=4.1.0

[flake8]
max-line-length = 120
extend-ignore = E203, W503, E501, F824
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    models,
    data,
    outputs

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
strict_optional = True
show_error_codes = True

[isort]
profile = black
line_length = 120
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --cov=src --cov-report=html --cov-report=term-missing -v --tb=short
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests